RESOLVED FIXED49128
>=webkitgtk-1.2.5: parallel build fails with libtool: link: cannot find the library `libwebkit-1.0.la' or unhandled argument `libwebkit-1.0.la'
https://bugs.webkit.org/show_bug.cgi?id=49128
Summary >=webkitgtk-1.2.5: parallel build fails with libtool: link: cannot find the l...
Pacho Ramos
Reported 2010-11-06 04:13:16 PDT
Created attachment 73170 [details] build.log As reported downstream in: http://bugs.gentoo.org/show_bug.cgi?id=343249 Parallel build from webkitgtk-1.2.5 (1.3.5 is also affected by this) fails with the following: In file included from ./JavaScriptCore/wtf/Assertions.h:45, from JavaScriptCore/API/tests/minidom.c:33: ./JavaScriptCore/wtf/Platform.h:778:11: warning: missing terminating ' character CC WebKitTools/GtkLauncher/Programs_GtkLauncher-main.o CXX WebKitTools/DumpRenderTree/Programs_DumpRenderTree-AccessibilityController.o CXX WebKitTools/DumpRenderTree/Programs_DumpRenderTree-AccessibilityUIElement.o CXX WebKitTools/DumpRenderTree/Programs_DumpRenderTree-GCController.o CXX WebKitTools/DumpRenderTree/Programs_DumpRenderTree-LayoutTestController.o CXX WebKitTools/DumpRenderTree/Programs_DumpRenderTree-WorkQueue.o CXX WebKitTools/DumpRenderTree/gtk/Programs_DumpRenderTree-AccessibilityControllerGtk.o CXX WebKitTools/DumpRenderTree/gtk/Programs_DumpRenderTree-AccessibilityUIElementGtk.o CXX WebKitTools/DumpRenderTree/gtk/Programs_DumpRenderTree-DumpRenderTree.o CXX WebKitTools/DumpRenderTree/gtk/Programs_DumpRenderTree-EventSender.o CXX WebKitTools/DumpRenderTree/gtk/Programs_DumpRenderTree-GCControllerGtk.o CXX WebKitTools/DumpRenderTree/gtk/Programs_DumpRenderTree-LayoutTestControllerGtk.o CXX WebKitTools/DumpRenderTree/gtk/Programs_DumpRenderTree-WorkQueueItemGtk.o CC WebKit/gtk/tests/Programs_unittests_testhttpbackend-testhttpbackend.o CCLD Programs/unittests/testloading libtool: link: cannot find the library `libwebkit-1.0.la' or unhandled argument `libwebkit-1.0.la' make[1]: *** [Programs/unittests/testloading] Errore 1 make[1]: *** Attesa dei processi non terminati.... make[1]: Leaving directory `/var/tmp/portage/net-libs/webkit-gtk-1.2.5/work/webkit-1.2.5' make: *** [all] Errore 2 Thanks
Attachments
build.log (191.49 KB, text/plain)
2010-11-06 04:13 PDT, Pacho Ramos
no flags
Patch (1.32 KB, patch)
2010-11-06 21:27 PDT, Martin Robinson
no flags
build.log (15.82 KB, text/plain)
2010-12-06 02:13 PST, a.radke
no flags
Martin Robinson
Comment 1 2010-11-06 21:21:07 PDT
This appears to be an issue with C++ style comments in the Platform.h header.
Martin Robinson
Comment 2 2010-11-06 21:27:12 PDT
Xan Lopez
Comment 3 2010-11-06 21:52:05 PDT
Comment on attachment 73187 [details] Patch This is not the cause of the build failure (since it's only a warning), and I'm not even sure it's the cause of the warning shown in the output, since usually GCC will tell you explicitly about comments when they are the problem. But r+ anyway (just don't close the bug I guess).
Martin Robinson
Comment 4 2010-11-06 22:59:35 PDT
X(In reply to comment #3) > (From update of attachment 73187 [details]) > This is not the cause of the build failure (since it's only a warning), and I'm not even sure it's the cause of the warning shown in the output, since usually GCC will tell you explicitly about comments when they are the problem. But r+ anyway (just don't close the bug I guess). You're quite right about this. I might do a bit of investigation before landing the patch. The Gentoo bug seems to indicate some flakiness with the parallel build, but there isn't a lot of information.
Pacho Ramos
Comment 5 2010-11-07 05:46:58 PST
(In reply to comment #4) > The Gentoo bug seems to indicate some flakiness with the parallel build, but > there isn't a lot of information. What more information would you need? Thanks
Martin Robinson
Comment 6 2010-11-08 09:30:53 PST
Comment on attachment 73187 [details] Patch Clearing flags on attachment: 73187 Committed r71535: <http://trac.webkit.org/changeset/71535>
a.radke
Comment 7 2010-12-06 02:13:22 PST
Created attachment 75658 [details] build.log
a.radke
Comment 8 2010-12-06 02:13:58 PST
The build fails for me in ArchLinux as well in parallel build mode. Applying the patch doesn solve it. See attached build log.
Xan Lopez
Comment 9 2010-12-06 02:30:51 PST
Can we get a build failure log of 1.3.x?
Gustavo Noronha (kov)
Comment 10 2012-01-27 09:59:09 PST
Been a long time, haven't seen problems similar to this one with parallel builds for quite a while, so I assume this has been fixed.
Note You need to log in before you can comment on or make changes to this bug.